--- a/bitrise.yml
+++ b/bitrise.yml
@@ -8,10 +8,10 @@ workflows:
     - activate-ssh-key@4:
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
     - git-clone@4: {}
-    - cache-pull@2: {}
     - install-missing-android-tools@2:
         inputs:
         - gradlew_path: "$PROJECT_LOCATION/gradlew"
+        is_always_run: true
   deploy-bitrise:
     steps:
     - deploy-to-bitrise-io@1: {}
@@ -97,7 +97,6 @@ workflows:
         - project_location: "$PROJECT_LOCATION"
         - module: "$MODULE"
         - variant: "$VARIANT"
-    - virtual-device-testing-for-android@1: {}
   devDebug:
     before_run:
     - setup
@@ -112,13 +111,11 @@ workflows:
     before_run:
     - setup
     - lint-tests
+    - android-build
     after_run:
+    - device-test
     - deploy-bitrise
     steps:
-    - android-build@0:
-        inputs:
-        - module: "$MODULE"
-        - variant: "$VARIANT"
     - sign-apk@1: {}
     envs:
     - opts:
@@ -128,11 +125,59 @@ workflows:
     before_run:
     - setup
     - lint-tests
-    after_run: []
+    - android-build
+    - device-test
     envs:
     - opts:
         is_expand: false
       VARIANT: devDebug
+  device-test:
+    description: |
+      ## How to get a signed APK
+
+      This workflow contains the **Sign APK** step. To sign your APK all you have to do is to:
+
+      1. Click on **Code Signing** tab
+      1. Find the **ANDROID KEYSTORE FILE** section
+      1. Click or drop your file on the upload file field
+      1. Fill the displayed 3 input fields:
+       1. **Keystore password**
+       1. **Keystore alias**
+       1. **Private key password**
+      1. Click on **[Save metadata]** button
+
+      That's it! From now on, **Sign APK** step will receive your uploaded files.
+
+      ## To run this workflow
+
+      If you want to run this workflow manually:
+
+      1. Open the app's build list page
+      2. Click on **[Start/Schedule a Build]** button
+      3. Select **deploy** in **Workflow** dropdown input
+      4. Click **[Start Build]** button
+
+      Or if you need this workflow to be started by a GIT event:
+
+      1. Click on **Triggers** tab
+      2. Setup your desired event (push/tag/pull) and select **deploy** workflow
+      3. Click on **[Done]** and then **[Save]** buttons
+
+      The next change in your repository that matches any of your trigger map event will start **deploy** workflow.
+    steps:
+    - virtual-device-testing-for-android@1: {}
+  android-build:
+    before_run: []
+    after_run: []
+    steps:
+    - android-build@0:
+        inputs:
+        - module: "$MODULE"
+        - variant: "$VARIANT"
+    envs:
+    - opts:
+        is_expand: false
+      VARIANT: prodRelease
 app:
   envs:
   - opts:
