--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,67 +1,198 @@
 ---
-format_version: '4'
+format_version: '8'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: android
-trigger_map:
-  - push_branch: "*"
-    workflow: primary
-  - pull_request_source_branch: "*"
-    workflow: primary
-  - tag: "*"
-    workflow: deploy
 workflows:
-  deploy:
+  setup:
     steps:
-      - activate-ssh-key@3.1.1:
-          run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-      - git-clone@4.0.7: {}
-      - cache-pull@2.0.1: {}
-      - script@1.1.5:
-          title: Do anything with Script step
-      - install-missing-android-tools@2.1.1: {}
-      - gradle-runner@1.8.2:
-          inputs:
-            - gradle_file: "$GRADLE_BUILD_FILE_PATH"
-            - gradle_task: assembleRelease
-            - gradlew_path: "$GRADLEW_PATH"
-      - deploy-to-bitrise-io@1.3.10: {}
-      - cache-push@2.0.5: {}
-  primary:
+    - activate-ssh-key@4:
+        run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
+    - git-clone@4: {}
+    - install-missing-android-tools@2:
+        inputs:
+        - gradlew_path: "$PROJECT_LOCATION/gradlew"
+        is_always_run: true
+  deploy-bitrise:
     steps:
-      - activate-ssh-key@4.0.3:
-          run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-      - git-clone@4.0.14: {}
-      - cache-pull@2.0.1: {}
-      - script@1.1.5:
-          title: Run Linters
-          inputs:
-            - content: |-
-                #!/usr/bin/env bash
-                # fail if any commands fails
-                set -e
-                # debug log
-                set -x
+    - deploy-to-bitrise-io@1: {}
+    - cache-push@2: {}
+  update-version:
+    description: |
+      ## How to get a signed APK
 
-                ./gradlew clean
-                ./gradlew ktlint
-                ./gradlew lintRelease
-      - install-missing-android-tools@2.3.5: {}
-      - gradle-runner@1.8.5:
-          inputs:
-            - gradle_file: "$GRADLE_BUILD_FILE_PATH"
-            - gradle_task: clean assembleDebug assembleDebugAndroidTest
-            - gradlew_path: "$GRADLEW_PATH"
-      - android-unit-test@0.9.6: {}
-      - virtual-device-testing-for-android@1.0.5:
-          inputs:
-            - test_type: instrumentation
-      - deploy-to-bitrise-io@1.3.19: {}
-      - cache-push@2.1.1: {}
+      This workflow contains the **Sign APK** step. To sign your APK all you have to do is to:
+
+      1. Click on **Code Signing** tab
+      1. Find the **ANDROID KEYSTORE FILE** section
+      1. Click or drop your file on the upload file field
+      1. Fill the displayed 3 input fields:
+       1. **Keystore password**
+       1. **Keystore alias**
+       1. **Private key password**
+      1. Click on **[Save metadata]** button
+
+      That's it! From now on, **Sign APK** step will receive your uploaded files.
+
+      ## To run this workflow
+
+      If you want to run this workflow manually:
+
+      1. Open the app's build list page
+      2. Click on **[Start/Schedule a Build]** button
+      3. Select **deploy** in **Workflow** dropdown input
+      4. Click **[Start Build]** button
+
+      Or if you need this workflow to be started by a GIT event:
+
+      1. Click on **Triggers** tab
+      2. Setup your desired event (push/tag/pull) and select **deploy** workflow
+      3. Click on **[Done]** and then **[Save]** buttons
+
+      The next change in your repository that matches any of your trigger map event will start **deploy** workflow.
+    steps:
+    - change-android-versioncode-and-versionname@1:
+        inputs:
+        - build_gradle_path: "$PROJECT_LOCATION/$MODULE/build.gradle"
+  lint-tests:
+    description: |
+      ## How to get a signed APK
+
+      This workflow contains the **Sign APK** step. To sign your APK all you have to do is to:
+
+      1. Click on **Code Signing** tab
+      1. Find the **ANDROID KEYSTORE FILE** section
+      1. Click or drop your file on the upload file field
+      1. Fill the displayed 3 input fields:
+       1. **Keystore password**
+       1. **Keystore alias**
+       1. **Private key password**
+      1. Click on **[Save metadata]** button
+
+      That's it! From now on, **Sign APK** step will receive your uploaded files.
+
+      ## To run this workflow
+
+      If you want to run this workflow manually:
+
+      1. Open the app's build list page
+      2. Click on **[Start/Schedule a Build]** button
+      3. Select **deploy** in **Workflow** dropdown input
+      4. Click **[Start Build]** button
+
+      Or if you need this workflow to be started by a GIT event:
+
+      1. Click on **Triggers** tab
+      2. Setup your desired event (push/tag/pull) and select **deploy** workflow
+      3. Click on **[Done]** and then **[Save]** buttons
+
+      The next change in your repository that matches any of your trigger map event will start **deploy** workflow.
+    steps:
+    - android-lint@0:
+        inputs:
+        - project_location: "$PROJECT_LOCATION"
+        - module: "$MODULE"
+        - variant: "$VARIANT"
+    - android-unit-test@1:
+        inputs:
+        - project_location: "$PROJECT_LOCATION"
+        - module: "$MODULE"
+        - variant: "$VARIANT"
+  devDebug:
+    before_run:
+    - setup
+    - lint-tests
+    after_run:
+    - deploy-bitrise
+    envs:
+    - opts:
+        is_expand: false
+      VARIANT: devDebug
+  prodRelease:
+    before_run:
+    - setup
+    - lint-tests
+    - android-build
+    after_run:
+    - device-test
+    - deploy-bitrise
+    steps:
+    - sign-apk@1: {}
+    envs:
+    - opts:
+        is_expand: false
+      VARIANT: prodRelease
+  pull-request:
+    before_run:
+    - setup
+    - lint-tests
+    - android-build
+    - device-test
+    envs:
+    - opts:
+        is_expand: false
+      VARIANT: devDebug
+  device-test:
+    description: |
+      ## How to get a signed APK
+
+      This workflow contains the **Sign APK** step. To sign your APK all you have to do is to:
+
+      1. Click on **Code Signing** tab
+      1. Find the **ANDROID KEYSTORE FILE** section
+      1. Click or drop your file on the upload file field
+      1. Fill the displayed 3 input fields:
+       1. **Keystore password**
+       1. **Keystore alias**
+       1. **Private key password**
+      1. Click on **[Save metadata]** button
+
+      That's it! From now on, **Sign APK** step will receive your uploaded files.
+
+      ## To run this workflow
+
+      If you want to run this workflow manually:
+
+      1. Open the app's build list page
+      2. Click on **[Start/Schedule a Build]** button
+      3. Select **deploy** in **Workflow** dropdown input
+      4. Click **[Start Build]** button
+
+      Or if you need this workflow to be started by a GIT event:
+
+      1. Click on **Triggers** tab
+      2. Setup your desired event (push/tag/pull) and select **deploy** workflow
+      3. Click on **[Done]** and then **[Save]** buttons
+
+      The next change in your repository that matches any of your trigger map event will start **deploy** workflow.
+    steps:
+    - virtual-device-testing-for-android@1: {}
+  android-build:
+    before_run: []
+    after_run: []
+    steps:
+    - android-build@0:
+        inputs:
+        - module: "$MODULE"
+        - variant: "$VARIANT"
+    envs:
+    - opts:
+        is_expand: false
+      VARIANT: prodRelease
 app:
   envs:
-    - opts:
-        is_expand: false
-      GRADLE_BUILD_FILE_PATH: build.gradle
-    - opts:
-        is_expand: false
-      GRADLEW_PATH: "./gradlew"
+  - opts:
+      is_expand: false
+    PROJECT_LOCATION: "."
+  - opts:
+      is_expand: false
+    MODULE: app
+  - opts:
+      is_expand: false
+    VARIANT: devDebug
+trigger_map:
+- push_branch: master
+  workflow: devDebug
+- pull_request_source_branch: "*"
+  workflow: pull-request
+- tag: "*"
+  workflow: prodRelease
