--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ android:
     - build-tools-26.0.2
 
     # The SDK version used to compile your project
+    - android-23
     - android-30
 
     # Additional components
