--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ env:
     - ANDROID_BUILD_TOOLS_VERSION=26.0.1
 
 android:
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
   components:
     - tools
     - platform-tools
@@ -31,4 +35,4 @@ before_script:
   - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi google_apis/armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  - travis_wait 20 adb shell input keyevent 82 &
