--- a/.travis.yml
+++ b/.travis.yml
@@ -36,3 +36,6 @@ before_script:
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - travis_wait 20 adb shell input keyevent 82 &
+
+script:
+  - ./gradlew build check
