--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'jacoco'
     id 'androidx.navigation.safeargs'
     id 'com.github.ben-manes.versions'
+    id 'com.google.gms.google-services'
 }
 
 apply from: 'jacoco.gradle'
@@ -104,6 +105,8 @@ ext {
     espresso_version = "3.1.1"
     core_testing_version = "2.1.0"
     mockito_inline_version = "2.28.2"
+    firebase_version = "26.6.0"
+    firebase_ui_version = "7.1.1"
 }
 
 jacoco {
@@ -159,6 +162,10 @@ dependencies {
     implementation "org.koin:koin-androidx-scope:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
     testImplementation "org.koin:koin-test:$koin_version"
+
+    // Firebase
+    implementation platform("com.google.firebase:firebase-bom:$firebase_version")
+    implementation "com.firebaseui:firebase-ui-auth:$firebase_ui_version"
 
     //Leak detection
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leak_canary_version"
