--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,7 +104,8 @@ ext {
     espresso_version = "3.1.1"
     core_testing_version = "2.1.0"
     mockito_inline_version = "2.28.2"
-    permissions_version = "4.8.0"
+    ktx_activity = "1.3.0-alpha04"
+    ktx_fragment = "1.3.0"
 }
 
 jacoco {
@@ -118,8 +119,8 @@ dependencies {
     implementation "com.google.android.material:material:$material_design_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
-    implementation "androidx.activity:activity-ktx:1.3.0-alpha04"
-    implementation "androidx.fragment:fragment-ktx:1.3.0"
+    implementation "androidx.activity:activity-ktx:$ktx_activity"
+    implementation "androidx.fragment:fragment-ktx:$ktx_fragment"
 
     // Code style
     ktlint "com.pinterest:ktlint:$ktlint_version"
@@ -169,7 +170,7 @@ dependencies {
     debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:$leak_canary_version"
 
     // Permissions
-    implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.0'
+    implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.1'
 
     // Test
     // Unit testing framework
