--- a/.travis.yml
+++ b/.travis.yml
@@ -35,3 +35,6 @@ android:
 #  - emulator -avd test -no-audio -no-window &
 #  - android-wait-for-emulator
   - travis_wait 20 adb shell input keyevent 82 &
+
+script:
+  - ./gradlew assembleDebug
