--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,8 @@ ext {
     espresso_version = "3.1.1"
     core_testing_version = "2.1.0"
     mockito_inline_version = "2.28.2"
+    ktx_activity = "1.3.0-alpha04"
+    ktx_fragment = "1.3.0"
 }
 
 jacoco {
@@ -117,6 +119,8 @@ dependencies {
     implementation "com.google.android.material:material:$material_design_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+    implementation "androidx.activity:activity-ktx:$ktx_activity"
+    implementation "androidx.fragment:fragment-ktx:$ktx_fragment"
 
     // Code style
     ktlint "com.pinterest:ktlint:$ktlint_version"
@@ -164,6 +168,9 @@ dependencies {
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leak_canary_version"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leak_canary_version"
     debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:$leak_canary_version"
+
+    // Permissions
+    implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.1'
 
     // Test
     // Unit testing framework
