--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,8 @@ ext {
     mockito_inline_version = "2.28.2"
     ktx_activity = "1.3.0-alpha04"
     ktx_fragment = "1.3.0"
+    play_services_maps = "17.0.0"
+    play_services_location = "18.0.0"
 }
 
 jacoco {
@@ -173,8 +175,8 @@ dependencies {
     implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.1'
 
     // Location
-    implementation "com.google.android.gms:play-services-maps:17.0.0"
-    implementation "com.google.android.gms:play-services-location:18.0.0"
+    implementation "com.google.android.gms:play-services-maps:$play_services_maps"
+    implementation "com.google.android.gms:play-services-location:$play_services_location"
 
     // Test
     // Unit testing framework
