--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.rocketinsights.android.fileprovider"
+            android:authorities="@string/fileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
