--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ ext {
     legacy_version = "1.0.0"
     constraint_layout_version = "2.0.4"
     ktlint_version = "0.33.0"
-    koin_version = "2.2.2"
+    koin_version = "3.0.1-beta-1"
     appCompat_version = "1.2.0"
     material_design_version = "1.3.0"
     coroutines_version = "1.4.3"
@@ -169,11 +169,10 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     // Koin
-    implementation "org.koin:koin-android:$koin_version"
-    implementation "org.koin:koin-androidx-scope:$koin_version"
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-    implementation "org.koin:koin-androidx-workmanager:$koin_version"
-    testImplementation "org.koin:koin-test:$koin_version"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-android-ext:$koin_version"
+    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
+    testImplementation "io.insert-koin:koin-test:$koin_version"
 
     // Firebase
     implementation platform("com.google.firebase:firebase-bom:$firebase_version")
