--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,7 @@ ext {
     lifecycle_extensions = "2.2.0"
     lifecycle_version = "2.3.0"
     room_version = "2.2.6"
-    glide_version = "4.12.0"
+    coil_version = "1.1.1"
     junit_version = "1.1.2"
     test_rule_version = "1.0.2"
     mockito_version = "2.2.0"
@@ -163,9 +163,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
-    // Glide
-    implementation "com.github.bumptech.glide:glide:$glide_version"
-    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    // Coil
+    implementation "io.coil-kt:coil:$coil_version"
 
     // Koin
     implementation "org.koin:koin-android:$koin_version"
