--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ android {
             manifestPlaceholders = [appName: "@string/app_name_dev"]
             applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
+            resValue 'string', 'workManager', "com.rocketinsights.android.dev.workmanager-init"
             resValue 'string', 'fileProvider', "com.rocketinsights.android.fileprovider.dev"
 
             // Google Maps
@@ -73,6 +74,7 @@ android {
             dimension "default"
 
             manifestPlaceholders = [appName: "@string/app_name"]
+            resValue 'string', 'workManager', "com.rocketinsights.android.workmanager-init"
             resValue 'string', 'fileProvider', "com.rocketinsights.android.fileprovider.prod"
 
             // Google Maps
@@ -104,7 +106,7 @@ ext {
     legacy_version = "1.0.0"
     constraint_layout_version = "2.0.4"
     ktlint_version = "0.33.0"
-    koin_version = "2.2.2"
+    koin_version = "3.0.1-beta-1"
     appCompat_version = "1.2.0"
     material_design_version = "1.3.0"
     coroutines_version = "1.4.3"
@@ -132,6 +134,7 @@ ext {
     play_services_location_version = "18.0.0"
     google_maps_utils_version = "2.2.0"
     quickpermissions_version = "0.4.1"
+    work_version = "2.5.0"
 }
 
 jacoco {
@@ -184,10 +187,10 @@ dependencies {
     implementation "io.coil-kt:coil:$coil_version"
 
     // Koin
-    implementation "org.koin:koin-android:$koin_version"
-    implementation "org.koin:koin-androidx-scope:$koin_version"
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-    testImplementation "org.koin:koin-test:$koin_version"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-android-ext:$koin_version"
+    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
+    testImplementation "io.insert-koin:koin-test:$koin_version"
 
     // Firebase
     implementation platform("com.google.firebase:firebase-bom:$firebase_version")
@@ -197,6 +200,9 @@ dependencies {
 
     // DataStore
     implementation "androidx.datastore:datastore-preferences:$datastore_version"
+
+    //Work
+    implementation "androidx.work:work-runtime-ktx:$work_version"
 
     // Leak detection
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leak_canary_version"
