--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,14 +1,10 @@
-name: Develop workflow
+name: Pull request workflow
 
 on:
-  push:
-    branches:
-      - develop
-      - main
-      - master
   pull_request:
     branches:
-      - develop
+      - main
+      - master
   workflow_dispatch:
 
 jobs:
