--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,9 +81,11 @@ android {
             resValue "string", "maps_api_key", GOOGLE_API_DEV
         }
     }
-    // Enables view binding.
     buildFeatures {
+        // Enables view binding
         viewBinding true
+        // Enables Jetpack Compose
+        compose true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -91,6 +93,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
     }
     testOptions {
         unitTests.all {
@@ -106,16 +111,16 @@ ext {
     legacy_version = "1.0.0"
     constraint_layout_version = "2.0.4"
     ktlint_version = "0.33.0"
-    koin_version = "3.0.1-beta-1"
-    appCompat_version = "1.2.0"
+    koin_version = "3.0.1-beta-2"
+    appCompat_version = "1.3.0-rc01"
     material_design_version = "1.3.0"
     coroutines_version = "1.4.3"
     timber_version = "4.7.1"
-    moshi_version = "1.11.0"
+    moshi_version = "1.12.0"
     retrofit_version = "2.9.0"
-    leak_canary_version = "2.6"
+    leak_canary_version = "2.7"
     lifecycle_extensions = "2.2.0"
-    lifecycle_version = "2.3.0"
+    lifecycle_version = "2.3.1"
     room_version = "2.2.6"
     coil_version = "1.1.1"
     junit_version = "1.1.2"
@@ -124,21 +129,25 @@ ext {
     espresso_version = "3.1.1"
     core_testing_version = "2.1.0"
     mockito_inline_version = "2.28.2"
-    firebase_version = "26.6.0"
+    firebase_version = "26.8.0"
     firebase_ui_version = "7.1.1"
     kotlinx_coroutines_play_services_version = "1.4.3"
     datastore_version = "1.0.0-alpha08"
-    ktx_activity_version = "1.3.0-alpha04"
-    ktx_fragment_version = "1.3.0"
+    ktx_activity_version = "1.3.0-alpha05"
+    ktx_fragment_version = "1.3.2"
     play_services_maps_version = "17.0.0"
     play_services_location_version = "18.0.0"
-    google_maps_utils_version = "2.2.0"
+    google_maps_utils_version = "2.2.2"
     quickpermissions_version = "0.4.1"
-    work_version = "2.5.0"
+    work_version = "2.7.0-alpha02"
+    // Compose
+    activity_compose_version = "1.3.0-alpha05"
+    constraint_layout_compose_version = "1.0.0-alpha05"
+    viewmodel_compose_version = "1.0.0-alpha03"
 }
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "0.8.6"
 }
 
 dependencies {
@@ -154,7 +163,7 @@ dependencies {
     // Code style
     ktlint "com.pinterest:ktlint:$ktlint_version"
 
-    //Logs
+    // Logs
     implementation "com.jakewharton.timber:timber:$timber_version"
 
     // Retrofit
@@ -201,7 +210,7 @@ dependencies {
     // DataStore
     implementation "androidx.datastore:datastore-preferences:$datastore_version"
 
-    //Work
+    // Work
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
     // Leak detection
@@ -216,6 +225,22 @@ dependencies {
 
     // Utilities for Maps SDK for Android (requires Google Play Services)
     implementation "com.google.maps.android:android-maps-utils:$google_maps_utils_version"
+
+    // Compose
+    implementation "androidx.activity:activity-compose:$activity_compose_version"
+    implementation "androidx.constraintlayout:constraintlayout-compose:$constraint_layout_compose_version"
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.foundation:foundation-layout:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material-icons-core:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.ui:ui-viewbinding:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewmodel_compose_version"
+    implementation "com.google.android.material:compose-theme-adapter:$compose_version"
 
     // Test
     // Unit testing framework
@@ -235,7 +260,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    //there's a conflict in the test libraries here, so we have to explicitly set these
+    // Compose UI Tests
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+
+    // there's a conflict in the test libraries here, so we have to explicitly set these
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation("androidx.arch.core:core-testing:$core_testing_version", {
