--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,15 @@
 buildscript {
     ext {
         kotlin_version = '1.4.31'
-        gradle_version = '4.1.2'
-        dependency_check_version = '6.1.1'
-        gradle_versions_version = '0.36.0'
+        gradle_version = '7.0.0-alpha12'
+        dependency_check_version = '6.1.5'
+        gradle_versions_version = '0.38.0'
         navigation_version = "2.3.4"
         google_services_version = "4.3.5"
+        compose_version = "1.0.0-beta03"
     }
     repositories {
-        jcenter()
+        gradlePluginPortal()
         google()
         mavenCentral()
     }
