--- a/.github/workflows/release_candidate.yml
+++ b/.github/workflows/release_candidate.yml
@@ -84,7 +84,7 @@ jobs:
           java-version: 1.8
 
       - name: Set File Name Environment Variable
-        run: echo "GENERATED_FILE_NAME=$(./gradlew -q fileName | tail -n 1)" >> $GITHUB_ENV
+        run: echo "GENERATED_FILE_NAME=$(./gradlew -q fileName | head -n 1)" >> $GITHUB_ENV
 
       - name: Generate Debug APK
         run: ./gradlew --parallel assembleDebug
