--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,26 +10,28 @@ jobs:
     name: Run Linter
     runs-on: [ ubuntu-latest ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Check Out
+        uses: actions/checkout@v2
 
-      - name: Set up JDK
+      - name: Set Up JDK
         uses: actions/setup-java@v1.4.3
         with:
           java-version: 1.8
 
-      - name: Run linter
+      - name: Run Linter
         run: ./gradlew --parallel lint
 
   unit_tests:
     name: Run Unit Tests
     runs-on: [ ubuntu-latest ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Check Out
+        uses: actions/checkout@v2
 
-      - name: Set up JDK
+      - name: Set Up JDK
         uses: actions/setup-java@v1.4.3
         with:
           java-version: 1.8
 
-      - name: Unit tests
+      - name: Unit Tests
         run: ./gradlew --parallel test
