--- a/.github/workflows/release_candidate.yml
+++ b/.github/workflows/release_candidate.yml
@@ -10,7 +10,8 @@ jobs:
     name: Run Linter
     runs-on: [ ubuntu-latest ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Check Out
+        uses: actions/checkout@v2
 
       - name: Set Up JDK
         uses: actions/setup-java@v1.4.3
@@ -24,7 +25,8 @@ jobs:
     name: Run Unit Tests
     runs-on: [ ubuntu-latest ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Check Out
+        uses: actions/checkout@v2
 
       - name: Set Up JDK
         uses: actions/setup-java@v1.4.3
@@ -39,7 +41,8 @@ jobs:
     runs-on: [ ubuntu-latest ]
     needs: [ lint, unit_tests ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Check Out
+        uses: actions/checkout@v2
 
       - name: Set Up JDK
         uses: actions/setup-java@v1.4.3
@@ -76,7 +79,8 @@ jobs:
     needs: [ lint, unit_tests ]
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check Out
+        uses: actions/checkout@v2
 
       - name: Set Up JDK
         uses: actions/setup-java@v1.4.3
